@@ -62,7 +62,7 @@ public:
 
 protected:
 	virtual void run();
-	void readEvent(/*struct pollfd pfd*/);
+	void readEvent(struct pollfd pfd);
 
 protected:
 	bool m_running;
